--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Save datas from wordepress/woocommerce REST Api to laravel eloquent models",
     "type": "library",
     "require": {
-        "automattic/woocommerce": "dev-master"
+        "automattic/woocommerce": "^3.0"
     },
     "homepage": "https://github.com/stefanoregis/woocommerceToLaravel",
     "support": {
