--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,12 @@
     "name": "stefanoregis/woocommerce-to-laravel",
     "description": "Save datas from wordepress/woocommerce REST Api to laravel eloquent models",
     "type": "library",
+    "require": {
 
+
+        "automattic/woocommerce": "^3.0"
+
+    },
 
     "homepage": "https://github.com/stefanoregis/woocommerceToLaravel",
     "support": {
